--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,12 @@ default: &default
 development:
   <<: *default
   database: hello_rails_react_development
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  username: postgres
+  password: garvin27
+  host: localhost
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -39,7 +45,7 @@ development:
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
